--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "mocha "
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -30,13 +31,20 @@
     "sweetalert2": "^11.7.11"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.5.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "vite": "^4.3.9"
   },
   "main": "productData.js",
@@ -51,5 +59,12 @@
     "url": "https://github.com/AleMMb/marketplace/issues"
   },
   "homepage": "https://github.com/AleMMb/marketplace#readme",
-  "description": ""
+  "description": "",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src_root_for_test_file.ts"
+    ]
+  }
 }
