firebase for images storage implemented

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "react": "^18.2.0",
