--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "mocha "
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
